@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>Registermaschine CLI</name>
-    <version>1.1.0</version>
+    <version>1.0.0</version>
     <groupId>dk.tij.registermaschine</groupId>
     <artifactId>console</artifactId>
 
@@ -17,8 +17,12 @@
 
     <repositories>
         <repository>
-            <id>github</id>
+            <id>github-jissuesystem</id>
             <url>https://maven.pkg.github.com/TiJ-code/JIssueSystem</url>
+        </repository>
+        <repository>
+            <id>github-registermaschine</id>
+            <url>https://maven.pkg.github.com/TiJ-code/Registermaschine</url>
         </repository>
     </repositories>
 
@@ -26,7 +30,17 @@
         <dependency>
             <groupId>dk.tij.registermaschine</groupId>
             <artifactId>core</artifactId>
-            <version>1.0.0</version>
+            <version>${registermaschine-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>dk.tij.registermaschine</groupId>
+            <artifactId>api</artifactId>
+            <version>${registermaschine-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>dk.tij.registermaschine</groupId>
+            <artifactId>instructions</artifactId>
+            <version>${registermaschine-core.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -52,6 +66,17 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>dk.tij.registermaschine.core/dk.tij.registermaschine.core.compilation.internal.compiling=cli</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.6.0</version>
                 <executions>
@@ -64,6 +89,9 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>dk.tij.registermaschine.console.ConsoleApplication</mainClass>
+                                    <manifestEntries>
+                                        <Add-Exports>dk.tij.registermaschine.core/dk.tij.registermaschine.core.compilation.internal.compiling=dk.tij.registermaschine.console</Add-Exports>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
